@@ -1,4 +1,8 @@
 2013-04-24 Max Baak <mbaak@cern.ch>
+	M       Utils.cxx
+	* Added GlobalObservables() and Offset() to createNll() calls.
+
+2013-04-24 Max Baak <mbaak@cern.ch>
         * Tagged HistFitter-00-00-26
 
 2013-04-24 Max Baak <mbaak@cern.ch>
